Adicionei um parágrafo.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, aperiam? Numquam architecto nostrum aliquam excepturi earum, nisi minus perspiciatis unde alias cumque, dolor possimus tenetur officia voluptate accusantium. Error, ratione?</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, nesciunt vitae illum exercitationem perspiciatis velit ea! Earum a debitis maxime assumenda officiis? Ullam sequi illum, eum voluptatum alias saepe officia?</p>
 </body>
 </html>
