--- a/curso-js-guanabara/aula04/ex001.html
+++ b/curso-js-guanabara/aula04/ex001.html
@@ -9,7 +9,9 @@
         body { background-color: rgb(171, 171, 184);
         color:blue;
         font: normal 20pt Arial;
-
+    }
+    h1 {
+        color: yellow;
     }
         
     </style>
@@ -19,8 +21,8 @@
     <p>Já me livrei da maldição.</p>
     <script>
         window.alert('Minha primeira mensagem')
-
-
+        window.confirm('Está gostando de JavaScript?')
+        window.prompt('Qual é o seu nome?')
     </script>
 </body>
 </html>
