--- a/curso-html-css-guanabara/ex009/index.html
+++ b/curso-html-css-guanabara/ex009/index.html
@@ -1,13 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Document</title>
+    <link rel="shortcut icon" href="Trade-ico.ico" type="image/x-icon">
+    <title>Listas</title>
 </head>
 <body>
-    
+    <h1>Trabalhando com listas</h1>
+    <h2>Listas Ordenadas - Numéricas</h2>
+    <ol>
+        <li>Acordar</li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+    </ol>
+
+    <h2>Listas Ordenadas - Numéricas</h2>
+    <p>Houve a necessidade de incluir a tarefa "Ligar para o João" antes de "Tomar café".</p>
+    <ol>
+        <li>Acordar</li>
+        <li><mark>Ligar para o João</mark></li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+    </ol>
+
+    <h2>Listas Ordenadas - Numéricas</h2>
+    <p>Inicando a lista com número "4".</p>
+    <ol start="4">
+        <li>Acordar</li>
+        <li>Ligar para o João</li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+    </ol>
+
+    <h2>Listas Ordenadas - Numéricas</h2>
+    <p>Inicando a lista normal com número "1".</p>
+    <ol type="1">
+        <li>Acordar</li>
+        <li>Ligar para o João</li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+        <li>Ir para faculade</li>
+        <li>Almoçar</li>
+        <li>Ir para o trabalho</li>
+        <li>Voltar para casa</li>
+        <li>Jantar</li>
+        <li>Dormir</li>
+    </ol>
+        
+    <h2>Listas Ordenadas - Letras Maiúsculas</h2>
+    <p>Inicando a lista normal com a letra "A", maísculo.</p>
+    <ol type="A">
+        <li>Acordar</li>
+        <li>Ligar para o João</li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+        <li>Ir para faculade</li>
+        <li>Almoçar</li>
+        <li>Ir para o trabalho</li>
+        <li>Voltar para casa</li>
+        <li>Jantar</li>
+        <li>Dormir</li>
+    </ol>
+
+    <h2>Listas Ordenadas - Números Romanos</h2>
+    <p>Inicando a lista normal com números Romanos "I".</p>
+    <ol type="I">
+        <li>Acordar</li>
+        <li>Ligar para o João</li>
+        <li>Tomar Café</li>
+        <li>escovar os dentes</li>
+        <li>Ir para faculade</li>
+        <li>Almoçar</li>
+        <li>Ir para o trabalho</li>
+        <li>Voltar para casa</li>
+        <li>Jantar</li>
+        <li>Dormir</li>
+    </ol>
+
+    <h2>Listas Não Ordenadas</h2>
+    <p>Com formato padrão, "type = disc":</p>
+    <ul>
+        <li>Pão</li>
+        <li>Leite</li>
+        <li>Tomate</li>
+        <li>Alface</li>
+        <li>Manteiga</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+    </ul>
+
+    <h2>Listas Não Ordenadas</h2>
+    <p>Com "type = square":</p>
+    <ul type="square">
+        <li>Pão</li>
+        <li>Leite</li>
+        <li>Tomate</li>
+        <li>Alface</li>
+        <li>Manteiga</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+    </ul>
+
+    <h2>Listas Não Ordenadas</h2>
+    <p>Com "type = circle":</p>
+    <ul type="circle">
+        <li>Pão</li>
+        <li>Leite</li>
+        <li>Tomate</li>
+        <li>Alface</li>
+        <li>Manteiga</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+    </ul>
 </body>
 </html>
