--- a/curso-js-guanabara/aula04/ex001.html
+++ b/curso-js-guanabara/aula04/ex001.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Trade-ico.ico" type="image/x-icon">
     <title>Aula 04 - Curso JS</title>
     <style>
         body { background-color: rgb(171, 171, 184);
@@ -18,8 +19,9 @@
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
-    <p>Já me livrei da maldição.</p>
+    <p>Já me livrei da maldição!!</p>
     <script>
+        /*Essa parte se incia o código de JavaScript, dentro da tag <script>*/ 
         window.alert('Minha primeira mensagem')
         window.confirm('Está gostando de JavaScript?')
         window.prompt('Qual é o seu nome?')
