--- a/curso-js-guanabara/aula04/ex001.html
+++ b/curso-js-guanabara/aula04/ex001.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Trade-ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="trade-ico.ico" type="image/x-icon">
     <title>Aula 04 - Curso JS</title>
     <style>
         body { background-color: rgb(171, 171, 184);
