--- a/exercicio-devmedia/002-lesson/ex006.html
+++ b/exercicio-devmedia/002-lesson/ex006.html
@@ -33,6 +33,8 @@
     <div id="text004">
         <h1>PS5: Sony realizará PlayStation Showcase em 9 de setembro</h1>
         <p>A Sony divulgou nesta quinta-feira (2) um novo PlayStation Showcase 2021, evento que contará com futuros lançamentos da empresa para PlayStation5. A transmissão ao vivo ocorrerá no dia 9 de setembro (quinta-feira), nos canais da marca no YouTube e Twich.</p>
+
+        <a href="https://www.devmedia.com.br/programacao/front-end">Plano de estudo Front-End</a>
     </div>
 
     
