--- a/cursos-dio/projetos-dio/JogosHTML5/001-helicoptero/index.html
+++ b/cursos-dio/projetos-dio/JogosHTML5/001-helicoptero/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
     <title>Jogo Helicóptero - Resgate</title>
     <link rel="stylesheet" href="css/estilo.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -15,16 +17,25 @@
 
             <div id="inicio" onclick="start()"> <!-- div inicio !-->
                 <h1>Resgate</h1>
-                <p>Utilize a tecla W para movimentar o helicópter para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
-                <p>Clique aqui para iniciar!!</p>
+                <p>Utilize a tecla <span>W</span> para movimentar o helicópter para cima, a tecla <span>S</span> para movimentar o helicóptero para baixo e a tecla <span>D</span> para atirar.</p>
+                <p><span>Clique aqui para iniciar!!!</span></p>
             </div> <!-- Fimda div inicio !-->
 
         </div> <!-- Fim da div FundoGame !-->
 
     </div> <!-- Fim da div container !-->
 
+    <!-- Sons do jogo !-->
+    <audio src="sons/som.mp3" preload="auto" id="somDisparo"></audio>
+    <audio src="sons/explosao.mp3" preload="auto" id="somExplosao"></audio>
+    <audio src="sons/musica_fundo.mp3" preload="auto" id="musica"></audio>
+    <audio src="sons/gameover.mp3" preload="auto" id="somGameover"></audio>
+    <audio src="sons/perdido.mp3" preload="auto" id="somPerdido"></audio>	
+    <audio src="sons/resgate.mp3" preload="auto" id="somResgate"></audio>
+
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
+    <script type="text/javascript" src="js/jquery-collision.min.js"></script>
     
 </body>
 </html>
